Some fixes on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -86,7 +86,7 @@ ul {
 li {
   display: inline;
   font-size: 0.8em;
-  margin-left: 0.2em;
+  margin-left: 1.2em;
   width: 25%;
   letter-spacing: 0.10em;
   text-align: center; }
